2012-05-26  Carl Hetherington  <cth@carlh.net>

	* Fix crash on attempting to use a non-existant filter.

	* src/lib/filter.cc: Fix typo in filter name.

2012-05-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.23 released.

2012-05-28  Carl Hetherington  <cth@carlh.net>

	* src/lib/player_manager.cc: possible fix to crash when stopping
	playback.

	* Fix crash in A/B mode.

2012-05-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.21 released.

2012-05-25  Carl Hetherington  <cth@carlh.net>

	* Add option to delay audio with respect to video.

	* src/tools/fixlengths.cc: add a few more options.

2012-05-22  Carl Hetherington  <cth@carlh.net>

	* src/tools/dvdomatic.cc: fix website address.

	* test: fix up a few test bits.

	* README: very brief introduction to a few things.

2012-05-22  Carl Hetherington  <cth@carlh.net>

	* Version 0.20 released.