@@ -22,7 +22,9 @@
 #include <fstream>
 #include "config.h"
 #include "server.h"
+#include "scaler.h"
 #include "screen.h"
+#include "filter.h"
 
 using namespace std;
 using namespace boost;
@@ -35,6 +37,7 @@ Config::Config ()
 	, _server_port (6192)
 	, _colour_lut_index (0)
 	, _j2k_bandwidth (250000000)
+	, _reference_scaler (Scaler::from_id ("bicubic"))
 {
 	ifstream f (file().c_str ());
 	string line;
@@ -63,6 +66,10 @@ Config::Config ()
 			_colour_lut_index = atoi (v.c_str ());
 		} else if (k == "j2k_bandwidth") {
 			_j2k_bandwidth = atoi (v.c_str ());
+		} else if (k == "reference_scaler") {
+			_reference_scaler = Scaler::from_id (v);
+		} else if (k == "reference_filter") {
+			_reference_filters.push_back (Filter::from_id (v));
 		} else if (k == "server") {
 			_servers.push_back (Server::create_from_metadata (v));
 		} else if (k == "screen") {
@@ -101,8 +108,13 @@ Config::write () const
 	f << "num_local_encoding_threads " << _num_local_encoding_threads << "\n"
 	  << "server_port " << _server_port << "\n"
 	  << "colour_lut_index " << _colour_lut_index << "\n"
-	  << "j2k_bandwidth " << _j2k_bandwidth << "\n";
+	  << "j2k_bandwidth " << _j2k_bandwidth << "\n"
+	  << "reference_scaler " << _reference_scaler->id () << "\n";
 
+	for (vector<Filter const *>::const_iterator i = _reference_filters.begin(); i != _reference_filters.end(); ++i) {
+		f << "reference_filter " << (*i)->id () << "\n";
+	}
+	
 	for (vector<Server*>::const_iterator i = _servers.begin(); i != _servers.end(); ++i) {
 		f << "server " << (*i)->as_metadata () << "\n";
 	}
